fiz a ultima parte da main

--- a/index.html
+++ b/index.html
@@ -69,9 +69,6 @@
                     <img src="img/Image.png" alt="reuniao-de-pessaos">
                 </figure>
             </section>
-
-
-            
             <div class="vagas-wrapper">
                 <div class="container-design">
                     <p class="titulo-vagas">Design</p>
@@ -93,6 +90,49 @@
                     </section>
                 </div>
             </div>
+            <div class="vagas-wrapper">
+                <div class="container-design">
+                    <p class="titulo-vagas">Desenvolvimento de Software</p>
+                    <section class="vagas-container">
+                        <div class="boxer-vaga">
+                            <p>Desenvolvedor(a) iOS</p>
+                            <div>
+                                <p>Full-time</p>
+                                <p>Faixa salarial: R$8.000</p>
+                            </div>
+                        </div>
+                        <div class="boxer-vaga">
+                            <p>Desenvolvedor(a) Front-end</p>
+                            <div>
+                                <p>Full-time</p>
+                                <p>Faixa salarial: R$7.000</p>
+                            </div>
+                        </div>
+                        <div class="boxer-vaga">
+                            <p>Desenvolvedor(a) Back-end</p>
+                            <div>
+                                <p>Full-time</p>
+                                <p>Faixa salarial: R$8.000</p>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+            <section class="container-recomendacoes">
+                <div class="caixa-vermelha">
+                    <div class="recomendacoes">
+                        <p>Veja o que nossos colaboradores falam sobre nós</p>
+                        <p>OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</p>
+                    </div>
+                    <div class="imagem-avatar">
+                        <img src="img/Avatar.png" alt="Avatar da Julia">
+                    </div>
+                    <div class="julia">
+                        <p>Júlia Castro</p>
+                        <p>Desenvolvedora Web</p>
+                    </div>
+                </div>
+            </section>
         
 
 
