--- a/index.html
+++ b/index.html
@@ -133,24 +133,22 @@
                     </div>
                 </div>
             </section>
-        
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         </main>
+
+        <footer class="rodape">
+            <h2>Acompanhe as nossas oportunidades</h2>
+            <p>Seja o primeiro a saber quando novas vagas serão abertas!</p>
+            
+            <div class="form">
+                <input type="email" placeholder="Seu e-mail">
+                <button class="botao-enviar">Cadastrar</button>
+            </div>
+            <p>© 2022 OptimusTech. Todos os direitos reservados.</p>         
+        </footer>
+
+
+
+
     </div>
 </body>
 </html>
